Fixed play button vertical alignment
git-svn-id: http://plugins.svn.wordpress.org/video-embed-thumbnail-generator/trunk@720565 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/kgvid_styles.css
+++ b/css/kgvid_styles.css
@@ -144,6 +144,7 @@ img.kgvid_ios_novideo {
 	padding:0px;   
 	background-color: rgba(0,0,0,0.4); 
 	overflow:hidden;
+	z-index: 3;
 }
 
 .kgvid_video_gallery_thumb:hover .titlebackground {
